Updates to handling different data requirements as well as an update to portfolio and provider files to add investment_value column.

--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -22,20 +22,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sbti-finance-tool in c:\\users\\conta\\anaconda3\\lib\\site-packages (1.0.9)\n",
+      "Requirement already satisfied: cleo<3.0.0,>=2.0.1 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (2.1.0)\n",
+      "Requirement already satisfied: openpyxl==3.1.2 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (3.1.2)\n",
+      "Requirement already satisfied: pandas==1.5.3 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (1.5.3)\n",
+      "Requirement already satisfied: pydantic==1.10.7 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (1.10.7)\n",
+      "Requirement already satisfied: requests==2.31.0 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (2.31.0)\n",
+      "Requirement already satisfied: six==1.16.0 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (1.16.0)\n",
+      "Requirement already satisfied: xlrd==2.0.1 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from sbti-finance-tool) (2.0.1)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\conta\\anaconda3\\lib\\site-packages (from openpyxl==3.1.2->sbti-finance-tool) (1.1.0)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from pandas==1.5.3->sbti-finance-tool) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from pandas==1.5.3->sbti-finance-tool) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from pandas==1.5.3->sbti-finance-tool) (2024.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from pydantic==1.10.7->sbti-finance-tool) (4.11.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from requests==2.31.0->sbti-finance-tool) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from requests==2.31.0->sbti-finance-tool) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from requests==2.31.0->sbti-finance-tool) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from requests==2.31.0->sbti-finance-tool) (2025.4.26)\n",
+      "Requirement already satisfied: crashtest<0.5.0,>=0.4.1 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from cleo<3.0.0,>=2.0.1->sbti-finance-tool) (0.4.1)\n",
+      "Requirement already satisfied: rapidfuzz<4.0.0,>=3.0.0 in c:\\users\\conta\\anaconda3\\lib\\site-packages (from cleo<3.0.0,>=2.0.1->sbti-finance-tool) (3.13.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install sbti-finance-tool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -66,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -95,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -118,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -147,7 +174,15 @@
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No duplicate values found in the 'company_id' column.\n"
+     ]
+    }
+   ],
    "source": [
     "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "\n",
@@ -165,8 +200,20 @@
     "    \"Date\": \"date_updated\"\n",
     "})\n",
     "\n",
+    "# Handle legacy column names if they exist\n",
+    "if 'company_isin' in portfolio.columns and 'isin' not in portfolio.columns:\n",
+    "    portfolio.rename(columns={'company_isin': 'isin'}, inplace=True)\n",
+    "if 'company_lei' in portfolio.columns and 'lei' not in portfolio.columns:\n",
+    "    portfolio.rename(columns={'company_lei': 'lei'}, inplace=True)\n",
+    "\n",
+    "# Ensure isin and lei columns exist (create empty ones if missing)\n",
+    "if 'isin' not in portfolio.columns:\n",
+    "    portfolio['isin'] = None\n",
+    "if 'lei' not in portfolio.columns:\n",
+    "    portfolio['lei'] = None\n",
+    "\n",
     "# Check for duplicate values in the 'company_id' column\n",
-    "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
+    "duplicate_ids = portfolio[portfolio.duplicated('company_id', keep=False)]\n",
     "if not duplicate_ids.empty:\n",
     "    print(\"Error: Duplicate values found in the 'company_id' column:\")\n",
     "    print(duplicate_ids)\n",
@@ -176,15 +223,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>company_id</th>\n",
+       "      <th>company_isin</th>\n",
+       "      <th>weights</th>\n",
+       "      <th>investment_value</th>\n",
+       "      <th>engagement_target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Company AG</td>\n",
+       "      <td>US0079031078</td>\n",
+       "      <td>US0079031078</td>\n",
+       "      <td>6.36%</td>\n",
+       "      <td>35000000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Company AH</td>\n",
+       "      <td>US00724F1012</td>\n",
+       "      <td>US00724F1012</td>\n",
+       "      <td>1.82%</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Company AI</td>\n",
+       "      <td>FR0000125338</td>\n",
+       "      <td>FR0000125338</td>\n",
+       "      <td>1.82%</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Company AJ</td>\n",
+       "      <td>US17275R1023</td>\n",
+       "      <td>US17275R1023</td>\n",
+       "      <td>1.82%</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Company AK</td>\n",
+       "      <td>CH0198251305</td>\n",
+       "      <td>CH0198251305</td>\n",
+       "      <td>1.82%</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  company_name    company_id  company_isin weights  investment_value  \\\n",
+       "0   Company AG  US0079031078  US0079031078   6.36%          35000000   \n",
+       "1   Company AH  US00724F1012  US00724F1012   1.82%          10000000   \n",
+       "2   Company AI  FR0000125338  FR0000125338   1.82%          10000000   \n",
+       "3   Company AJ  US17275R1023  US17275R1023   1.82%          10000000   \n",
+       "4   Company AK  CH0198251305  CH0198251305   1.82%          10000000   \n",
+       "\n",
+       "  engagement_target  \n",
+       "0              True  \n",
+       "1               NaN  \n",
+       "2               NaN  \n",
+       "3               NaN  \n",
+       "4               NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_portfolio.head(5)"
+    "portfolio.head(5)"
    ]
   },
   {
@@ -196,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -204,7 +351,7 @@
    },
    "outputs": [],
    "source": [
-    "companies = SBTi.utils.dataframe_to_portfolio(df_portfolio)"
+    "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
    ]
   },
   {
@@ -217,13 +364,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status code from fetching the CTA file: 200, 200 = OK\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"['isin'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m temperature_score \u001b[38;5;241m=\u001b[39m TemperatureScore(                  \u001b[38;5;66;03m# all available options:\u001b[39;00m\n\u001b[0;32m      2\u001b[0m     time_frames\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(SBTi\u001b[38;5;241m.\u001b[39minterfaces\u001b[38;5;241m.\u001b[39mETimeFrames),     \u001b[38;5;66;03m# ETimeFrames: SHORT MID and LONG\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     scopes\u001b[38;5;241m=\u001b[39m[EScope\u001b[38;5;241m.\u001b[39mS1S2, EScope\u001b[38;5;241m.\u001b[39mS3, EScope\u001b[38;5;241m.\u001b[39mS1S2S3],    \u001b[38;5;66;03m# EScopes: S3, S1S2 and S1S2S3\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     aggregation_method\u001b[38;5;241m=\u001b[39mPortfolioAggregationMethod\u001b[38;5;241m.\u001b[39mWATS \u001b[38;5;66;03m# Options for the aggregation method are WATS, TETS, AOTS, MOTS, EOTS, ECOTS, and ROTS.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m )\n\u001b[1;32m----> 6\u001b[0m amended_portfolio \u001b[38;5;241m=\u001b[39m temperature_score\u001b[38;5;241m.\u001b[39mcalculate(data_providers\u001b[38;5;241m=\u001b[39m[provider], portfolio\u001b[38;5;241m=\u001b[39mcompanies)\n",
+      "File \u001b[1;32mc:\\Users\\conta\\Documents\\GitHub\\SBTi-finance-tool\\SBTi\\temperature_score.py:516\u001b[0m, in \u001b[0;36mTemperatureScore.calculate\u001b[1;34m(self, data, data_providers, portfolio)\u001b[0m\n\u001b[0;32m    514\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    515\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m data_providers \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m portfolio \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 516\u001b[0m         data \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mget_data(data_providers, portfolio)\n\u001b[0;32m    517\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    518\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    519\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou need to pass and either a data set or a list of data providers and companies\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    520\u001b[0m         )\n",
+      "File \u001b[1;32mc:\\Users\\conta\\Documents\\GitHub\\SBTi-finance-tool\\SBTi\\utils.py:222\u001b[0m, in \u001b[0;36mget_data\u001b[1;34m(data_providers, portfolio)\u001b[0m\n\u001b[0;32m    219\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo targets found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    221\u001b[0m \u001b[38;5;66;03m# Supplement the company data with the SBTi target status\u001b[39;00m\n\u001b[1;32m--> 222\u001b[0m company_data \u001b[38;5;241m=\u001b[39m SBTi()\u001b[38;5;241m.\u001b[39mget_sbti_targets(company_data, _make_id_map(df_portfolio))\n\u001b[0;32m    224\u001b[0m \u001b[38;5;66;03m# Prepare the data\u001b[39;00m\n\u001b[0;32m    225\u001b[0m portfolio_data \u001b[38;5;241m=\u001b[39m TargetProtocol()\u001b[38;5;241m.\u001b[39mprocess(target_data, company_data)\n",
+      "File \u001b[1;32mc:\\Users\\conta\\Documents\\GitHub\\SBTi-finance-tool\\SBTi\\utils.py:158\u001b[0m, in \u001b[0;36m_make_id_map\u001b[1;34m(df_portfolio)\u001b[0m\n\u001b[0;32m    149\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_make_id_map\u001b[39m(df_portfolio: pd\u001b[38;5;241m.\u001b[39mDataFrame) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n\u001b[0;32m    150\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    151\u001b[0m \u001b[38;5;124;03m    Create a mapping from company_id to ISIN and LEI (required for the SBTi matching).\u001b[39;00m\n\u001b[0;32m    152\u001b[0m \n\u001b[0;32m    153\u001b[0m \u001b[38;5;124;03m    :param df_portfolio: The complete portfolio\u001b[39;00m\n\u001b[0;32m    154\u001b[0m \u001b[38;5;124;03m    :return: A mapping from company_id to (ISIN, LEI) tuple\u001b[39;00m\n\u001b[0;32m    155\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m    156\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[0;32m    157\u001b[0m         company_id: (company[ColumnsConfig\u001b[38;5;241m.\u001b[39mCOMPANY_ISIN], company[ColumnsConfig\u001b[38;5;241m.\u001b[39mCOMPANY_LEI])\n\u001b[1;32m--> 158\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m company_id, company \u001b[38;5;129;01min\u001b[39;00m df_portfolio[\n\u001b[0;32m    159\u001b[0m             [ColumnsConfig\u001b[38;5;241m.\u001b[39mCOMPANY_ID, ColumnsConfig\u001b[38;5;241m.\u001b[39mCOMPANY_ISIN, ColumnsConfig\u001b[38;5;241m.\u001b[39mCOMPANY_LEI]\n\u001b[0;32m    160\u001b[0m         ]\n\u001b[0;32m    161\u001b[0m         \u001b[38;5;241m.\u001b[39mset_index(ColumnsConfig\u001b[38;5;241m.\u001b[39mCOMPANY_ID)\n\u001b[0;32m    162\u001b[0m         \u001b[38;5;241m.\u001b[39mto_dict(orient\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    163\u001b[0m         \u001b[38;5;241m.\u001b[39mitems()\n\u001b[0;32m    164\u001b[0m     }\n",
+      "File \u001b[1;32mc:\\Users\\conta\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:3813\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3811\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   3812\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 3813\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39m_get_indexer_strict(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   3815\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\conta\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6070\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6067\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6068\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6070\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   6072\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6073\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6074\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\conta\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6133\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6130\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6132\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m-> 6133\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['isin'] not in index\""
+     ]
+    }
+   ],
    "source": [
     "temperature_score = TemperatureScore(                  # all available options:\n",
     "    time_frames=list(SBTi.interfaces.ETimeFrames),     # ETimeFrames: SHORT MID and LONG\n",
