--- a/examples/3_what-if-analysis.ipynb
+++ b/examples/3_what-if-analysis.ipynb
@@ -79,19 +79,52 @@
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "\n",
-    "# Change the column names \n",
-    "df_portfolio = df_portfolio.rename(columns={\n",
-    "    \"Company Name\": \"company_name\",\n",
-    "    \"ISIN\": \"isin\",\n",
-    "    \"LEI\": \"lei\",\n",
-    "    \"Sector\": \"sector\",\n",
-    "    \"Target\": \"full_target_language\",\n",
-    "    \"Net-Zero Committed\": \"net_zero_status\",\n",
-    "    \"Near term - Target Status\": \"near_term_status\",\n",
-    "    \"Target Classification\": \"target_classification_long\",\n",
-    "    \"Extension\": \"reason_for_extension_or_removal\",\n",
-    "    \"Date\": \"date_updated\"\n",
-    "})\n",
+    "# Print original columns to diagnose\n",
+    "print(\"Original columns:\", df_portfolio.columns.tolist())\n",
+    "\n",
+    "# Create a more cautious renaming dictionary based on what columns exist\n",
+    "rename_dict = {}\n",
+    "if \"Company Name\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Company Name\"] = \"company_name\"\n",
+    "if \"ISIN\" in df_portfolio.columns:\n",
+    "    rename_dict[\"ISIN\"] = \"isin\" \n",
+    "if \"LEI\" in df_portfolio.columns:\n",
+    "    rename_dict[\"LEI\"] = \"lei\"\n",
+    "if \"Sector\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Sector\"] = \"sector\"\n",
+    "if \"Target\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Target\"] = \"full_target_language\"\n",
+    "if \"Net-Zero Committed\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Net-Zero Committed\"] = \"net_zero_status\"\n",
+    "if \"Near term - Target Status\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Near term - Target Status\"] = \"near_term_status\"\n",
+    "if \"Target Classification\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Target Classification\"] = \"target_classification_long\"\n",
+    "if \"Extension\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Extension\"] = \"reason_for_extension_or_removal\"\n",
+    "if \"Date\" in df_portfolio.columns:\n",
+    "    rename_dict[\"Date\"] = \"date_updated\"\n",
+    "\n",
+    "# Apply column renaming\n",
+    "df_portfolio = df_portfolio.rename(columns=rename_dict)\n",
+    "\n",
+    "# Handle legacy column names if they exist\n",
+    "if 'company_isin' in df_portfolio.columns:\n",
+    "    df_portfolio.rename(columns={'company_isin': 'isin'}, inplace=True)\n",
+    "if 'company_lei' in df_portfolio.columns:\n",
+    "    df_portfolio.rename(columns={'company_lei': 'lei'}, inplace=True)\n",
+    "\n",
+    "# Ensure required columns exist\n",
+    "required_columns = ['company_id', 'company_name', 'isin', 'lei', 'investment_value']\n",
+    "for col in required_columns:\n",
+    "    if col not in df_portfolio.columns:\n",
+    "        df_portfolio[col] = None\n",
+    "\n",
+    "# Convert identifiers to string\n",
+    "if 'isin' in df_portfolio.columns:\n",
+    "    df_portfolio['isin'] = df_portfolio['isin'].astype(str)\n",
+    "if 'lei' in df_portfolio.columns:\n",
+    "    df_portfolio['lei'] = df_portfolio['lei'].astype(str)\n",
     "\n",
     "# Check for duplicate values in the 'company_id' column\n",
     "duplicate_ids = df_portfolio[df_portfolio.duplicated('company_id', keep=False)]\n",
@@ -101,9 +134,20 @@
     "else:\n",
     "    print(\"No duplicate values found in the 'company_id' column.\")\n",
     "\n",
+    "# Display final columns to verify\n",
+    "print(\"Final columns:\", df_portfolio.columns.tolist())\n",
+    "\n",
+    "# Convert to portfolio objects and get data\n",
     "companies = SBTi.utils.dataframe_to_portfolio(df_portfolio)\n",
-    "portfolio_data = SBTi.utils.get_data([provider], companies)\n",
-    "scenarios = {}"
+    "try:\n",
+    "    portfolio_data = SBTi.utils.get_data([provider], companies)\n",
+    "    scenarios = {}\n",
+    "    print(\"Successfully loaded portfolio data\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading portfolio data: {str(e)}\")\n",
+    "    # Add more error handling if needed\n",
+    "    import traceback\n",
+    "    traceback.print_exc()"
    ]
   },
   {
