Update to portfolio coverage logic to set SBTi targets as cardinal

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -58,7 +58,8 @@
     "from SBTi.portfolio_coverage_tvp import PortfolioCoverageTVP\n",
     "from SBTi.temperature_score import TemperatureScore\n",
     "from SBTi.interfaces import ETimeFrames, EScope\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import requests"
    ]
   },
   {
@@ -222,6 +223,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the CTA and set up a SBTi target frame of reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Provides an absolute frame of reference for SBTi targets so that they are considered as cardinal compared to others in the calculation of temperature scores.\n",
+    "def inject_sbti_validation_for_timeframe_scope_data(amended_portfolio, original_portfolio, debug=True):\n",
+    "    \"\"\"\n",
+    "    Specially designed for the SBTi tool where amended_portfolio contains multiple rows \n",
+    "    per company (one for each time frame and scope combination).\n",
+    "    \"\"\"\n",
+    "    if 'sbti_validated' not in original_portfolio.columns:\n",
+    "        print(\"⚠ No 'sbti_validated' column found in original portfolio\")\n",
+    "        return amended_portfolio\n",
+    "    \n",
+    "    # Store original values before modification\n",
+    "    original_validated_count = original_portfolio['sbti_validated'].sum()\n",
+    "    original_companies_count = len(original_portfolio)\n",
+    "    \n",
+    "    # Get count of unique companies in amended portfolio\n",
+    "    unique_companies_amended = amended_portfolio['company_id'].nunique()\n",
+    "    \n",
+    "    if debug:\n",
+    "        print(f\"Original portfolio: {original_companies_count} companies, {original_validated_count} validated\")\n",
+    "        print(f\"Amended portfolio: {len(amended_portfolio)} rows, {unique_companies_amended} unique companies\")\n",
+    "        \n",
+    "        # Check for duplicated rows by company_id\n",
+    "        if len(amended_portfolio) > unique_companies_amended:\n",
+    "            print(f\"Multiple rows per company detected in amended portfolio\")\n",
+    "            print(f\"Rows per company: {len(amended_portfolio) / unique_companies_amended:.2f}\")\n",
+    "            \n",
+    "            # Show distribution of time_frame and scope if they exist\n",
+    "            if 'time_frame' in amended_portfolio.columns:\n",
+    "                print(\"\\nTime frame distribution:\")\n",
+    "                print(amended_portfolio['time_frame'].value_counts())\n",
+    "            if 'scope' in amended_portfolio.columns:\n",
+    "                print(\"\\nScope distribution:\")\n",
+    "                print(amended_portfolio['scope'].value_counts())\n",
+    "    \n",
+    "    # Create a validation mapping\n",
+    "    validation_map = dict(zip(original_portfolio['company_id'], original_portfolio['sbti_validated']))\n",
+    "    \n",
+    "    # Apply validation to all rows in amended portfolio\n",
+    "    amended_portfolio['sbti_validated'] = amended_portfolio['company_id'].map(validation_map).fillna(False)\n",
+    "    \n",
+    "    # Count unique validated companies after modification\n",
+    "    validated_companies = amended_portfolio[amended_portfolio['sbti_validated']]['company_id'].nunique()\n",
+    "    \n",
+    "    # Print validation summary\n",
+    "    print(f\"\\nOriginal validated companies: {original_validated_count}\")\n",
+    "    print(f\"Unique companies validated in amended portfolio: {validated_companies}\")\n",
+    "    \n",
+    "    if original_validated_count == validated_companies:\n",
+    "        print(\"✓ CTA validation successfully preserved at company level\")\n",
+    "    else:\n",
+    "        print(\"⚠ CTA validation mismatch at company level\")\n",
+    "        \n",
+    "        # Additional debugging\n",
+    "        if debug:\n",
+    "            print(\"\\nChecking for specific discrepancies...\")\n",
+    "            # Get list of company IDs that should be validated\n",
+    "            original_validated_ids = set(original_portfolio[original_portfolio['sbti_validated']]['company_id'])\n",
+    "            amended_validated_ids = set(amended_portfolio[amended_portfolio['sbti_validated']]['company_id'])\n",
+    "            \n",
+    "            missing_validations = original_validated_ids - amended_validated_ids\n",
+    "            extra_validations = amended_validated_ids - original_validated_ids\n",
+    "            \n",
+    "            if missing_validations:\n",
+    "                print(f\"Companies that should be validated but aren't: {len(missing_validations)}\")\n",
+    "                print(missing_validations)\n",
+    "            \n",
+    "            if extra_validations:\n",
+    "                print(f\"Companies that shouldn't be validated but are: {len(extra_validations)}\")\n",
+    "                print(extra_validations)\n",
+    "    \n",
+    "    return amended_portfolio\n",
+    "# STANDALONE SBTi VALIDATION - Download and process CTA data\n",
+    "print(\"Downloading SBTi Companies Taking Action (CTA) data...\")\n",
+    "CTA_FILE_URL = \"https://cdn.sciencebasedtargets.org/download/target-dashboard\"\n",
+    "\n",
+    "try:\n",
+    "    resp = requests.get(CTA_FILE_URL)\n",
+    "    if resp.status_code == 200:\n",
+    "        cta_file = pd.read_excel(resp.content)\n",
+    "        print(f\"Downloaded CTA data with {len(cta_file)} rows\")\n",
+    "        \n",
+    "        # Extract relevant columns\n",
+    "        targets = cta_file[['company_name', 'isin', 'lei', 'action', 'target', 'date_published']]\n",
+    "        \n",
+    "        # Filter for companies with targets\n",
+    "        companies_with_targets = targets[targets['action'] == 'Target']\n",
+    "        \n",
+    "        # Get unique identifiers\n",
+    "        all_isin_set = set(companies_with_targets['isin'].dropna())\n",
+    "        all_lei_set = set(companies_with_targets['lei'].dropna())\n",
+    "        \n",
+    "        # Create a set of lowercase company names\n",
+    "        companies_with_targets['company_name_lower'] = companies_with_targets['company_name'].str.lower()\n",
+    "        company_name_set = set(companies_with_targets['company_name_lower'].dropna())\n",
+    "        \n",
+    "        # Add portfolio columns if they don't exist\n",
+    "        if 'isin' not in portfolio.columns and 'company_isin' in portfolio.columns:\n",
+    "            portfolio['isin'] = portfolio['company_isin']\n",
+    "        if 'lei' not in portfolio.columns and 'company_lei' in portfolio.columns:\n",
+    "            portfolio['lei'] = portfolio['company_lei']\n",
+    "        \n",
+    "        # Function to check if ISIN, LEI, or company name is validated\n",
+    "        def is_validated(row):\n",
+    "            # First check LEI\n",
+    "            if pd.notna(row.get('lei')) and str(row.get('lei')).lower() in [str(x).lower() for x in all_lei_set]:\n",
+    "                return True\n",
+    "            \n",
+    "            # Then check ISIN\n",
+    "            if pd.notna(row.get('isin')) and str(row.get('isin')).lower() in [str(x).lower() for x in all_isin_set]:\n",
+    "                return True\n",
+    "            \n",
+    "            # Finally check company name\n",
+    "            if pd.notna(row.get('company_name')):\n",
+    "                company_name_lower = str(row.get('company_name')).lower()\n",
+    "                if company_name_lower in company_name_set:\n",
+    "                    return True\n",
+    "            \n",
+    "            return False\n",
+    "        \n",
+    "        # Add the validated column to the portfolio\n",
+    "        portfolio['sbti_validated'] = portfolio.apply(is_validated, axis=1)\n",
+    "        \n",
+    "        # Convert portfolio to company objects again (after adding sbti_validated)\n",
+    "        companies = SBTi.utils.dataframe_to_portfolio(portfolio)\n",
+    "        \n",
+    "        # Print validation summary\n",
+    "        validated_count = portfolio['sbti_validated'].sum()\n",
+    "        print(f\"Companies with SBTi-validated targets: {validated_count} out of {len(portfolio)} ({validated_count/len(portfolio)*100:.2f}%)\")\n",
+    "        \n",
+    "        if 'investment_value' in portfolio.columns:\n",
+    "            total_investment = portfolio['investment_value'].sum()\n",
+    "            validated_investment = portfolio[portfolio['sbti_validated']]['investment_value'].sum()\n",
+    "            print(f\"Portfolio coverage by investment value: {validated_investment/total_investment*100:.2f}%\")\n",
+    "    else:\n",
+    "        print(f\"Failed to download CTA file: HTTP {resp.status_code}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error processing CTA file: {str(e)}\")\n",
+    "\n",
+    "# Update provider data with our validation results\n",
+    "print(\"Updating provider data with validated companies...\")\n",
+    "try:\n",
+    "    # Get the fundamental_data from provider\n",
+    "    if hasattr(provider, 'data') and 'fundamental_data' in provider.data:\n",
+    "        # Create a mapping of company_id to validation status\n",
+    "        validation_map = portfolio[['company_id', 'sbti_validated']].set_index('company_id')['sbti_validated'].to_dict()\n",
+    "        \n",
+    "        # Update sbti_validated in provider data\n",
+    "        updated_count = 0\n",
+    "        for idx, row in provider.data['fundamental_data'].iterrows():\n",
+    "            company_id = row['company_id']\n",
+    "            if company_id in validation_map:\n",
+    "                # Ensure we're setting a proper boolean value\n",
+    "                is_validated = bool(validation_map[company_id])\n",
+    "                provider.data['fundamental_data'].at[idx, 'sbti_validated'] = is_validated\n",
+    "                updated_count += 1\n",
+    "        \n",
+    "        # Force the sbti_validated column to be boolean type\n",
+    "        provider.data['fundamental_data']['sbti_validated'] = provider.data['fundamental_data']['sbti_validated'].astype(bool)\n",
+    "        \n",
+    "        print(f\"Updated sbti_validated for {updated_count} companies in provider data\")\n",
+    "    else:\n",
+    "        print(\"Provider does not have expected data structure - sbti_validated flags may be overwritten\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error updating provider data: {str(e)}\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -290,6 +470,8 @@
    "outputs": [],
    "source": [
     "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
+    "# Preserve the CTA validation from our direct download\n",
+    "amended_portfolio = inject_sbti_validation_for_timeframe_scope_data(amended_portfolio, portfolio, debug=True)\n",
     "aggregated_scores = temperature_score.aggregate_scores(amended_portfolio)\n",
     "amended_portfolio.head(5) # display top 5 rows"
    ]
