Update to Example Notebooks and Backend to allow for variations in target dashboard data
Various updates to utils.py, sbti.py and example notebooks to build in tolerance for old and new formatting options of the SBTi target dashboard in target calculation.

--- a/examples/4b_portfolio_agg_readymade_TS.ipynb
+++ b/examples/4b_portfolio_agg_readymade_TS.ipynb
@@ -343,7 +343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sbti_getting_started",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -357,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
@@ -366,11 +366,6 @@
      "collapsed": false
     },
     "source": []
-   }
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "260a89ed4759e207a7c9e5b2d37763935150b09a767b0397e1862244756e4254"
    }
   }
  },
