--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -149,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "df_portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
    ]
   },
   {
@@ -162,7 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "df_portfolio.head(5)"
+    "portfolio.head(5)"
    ]
   },
   {
@@ -182,7 +182,7 @@
    },
    "outputs": [],
    "source": [
-    "companies = SBTi.utils.dataframe_to_portfolio(df_portfolio)"
+    "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
    ]
   },
   {
@@ -289,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
