--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -414,7 +414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.7"
   },
   "pycharm": {
    "stem_cell": {
